update game logic and ui

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
         <canvas id="background-canvas" ></canvas>
         <canvas id="game-canvas"></canvas>
     </div>
-        
+
+    <div class="info-container" >
+        <h1>Score <span id="score-box">0</span> </h1>
+        <canvas id="next-shape-canvas" ></canvas>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
