--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <div class="canvas-container">
         <canvas id="background-canvas" ></canvas>
         <canvas id="game-canvas"></canvas>
+
+        <div class="info-container" >
+            <div class="score-text" >Score <span id="score-box">0</span> </div>
+            <div id="next-shape-box" ></div>
+        </div>
     </div>
 
-    <div class="info-container" >
-        <h1>Score <span id="score-box">0</span> </h1>
-        <canvas id="next-shape-canvas" ></canvas>
-    </div>
     <script src="script.js"></script>
 </body>
 </html>
